--- a/CSV_Comparer/CSV_Comparer.vbproj
+++ b/CSV_Comparer/CSV_Comparer.vbproj
@@ -154,6 +154,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="res\compare.ico" />
+    <Content Include="res\csv_comparer.png" />
+    <Content Include="res\csv_comparer_howto.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
